--- a/帖子/hello-world.mdx
+++ b/帖子/hello-world.mdx
@@ -5,3 +5,4 @@ date: Sep 14 2021
 ---
 
 This is an example post. There's another one [here](/posts/example-post).
+<a href ="https://www.baidu.com"><img src="https://www.baidu.com/img/bd_logo.png"></a>
