--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -1,7 +1,8 @@
 ---
-title: Design critiques at Figma
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+title: 宝塔部署Alist教程
+description: "应广大宝塔用户的需求，“宝塔部署Alist教程”来了。"
 date: Jan 2 2021
 ---
 
-This is an example post. There's another one [here](/posts/example-post).
+### 安装Alist
+直接使用一键脚本就可以，先打开宝塔，然后点击左侧的终端，进入ssh终端，可能会让你输入密码，相信你应该知道自己的密码，然后复制下面的代码粘贴回车运行
