--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -6,3 +6,8 @@ date: Jan 2 2021
 
 ### 安装Alist
 直接使用一键脚本就可以，先打开宝塔，然后点击左侧的终端，进入ssh终端，可能会让你输入密码，相信你应该知道自己的密码，然后复制下面的代码粘贴回车运行
+Syntax highlighting
+
+```js
+curl -fsSL "https://nn.ci/alist.sh" | bash -s install
+};
