--- a/posts/p1.mdx
+++ b/posts/p1.mdx
@@ -1,2 +1,8 @@
+---
+title: 测试
+description: "Consider that for a moment: 这是一个视频"
+date: Jun 2 2021
+---
+
 <video id="video1" width="100%" height="100%" controlsList="nodownload" poster="http://photo.16pic.com/00/91/38/16pic_9138409_b.jpg" preload="none" controls="controls"><source src="https://666.erheqi.repl.co/d/pikpak/%E7%94%B5%E6%8A%A5%E5%88%86%E4%BA%AB/%E5%86%99%E7%9C%9F%E9%9B%86/2021%E5%86%99%E7%9C%9F%E5%90%88%E9%9B%86/BGRP-005(DGRP-005)%20%20%20.mkv?sign=6qi8L3gWRMtdvA17__tLRXbBq9g8yKu5SJOV1gLrof4=:0" />
 </video>
