--- a/posts/test-post.mdx
+++ b/posts/test-post.mdx
@@ -1,6 +1,40 @@
 ---
-title: 宝塔部署Alist教程
-description: "应广大宝塔用户的需求，“宝塔部署Alist教程”来了。"
+title: 测试
+description: "<html>
+<head>
+<style>
+/* 设置视频容器的宽度为100%，高度自适应 */
+.video-container {
+  width: 100%;
+  height: 0;
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9的比例 */
+}
+
+/* 设置视频元素的宽度和高度为100%，并居中显示 */
+.video-container video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+</style>
+</head>
+<body>
+<!-- 创建一个视频容器，将视频元素放在其中 -->
+<div class="video-container">
+  <!-- 使用video标签创建视频播放器，设置poster属性为视频封面图片的URL，设置controls属性为true，以显示控制栏 -->
+  <video poster="https://i.imgs.ovh/2023/12/02/wMNvI.png" controls>
+    <!-- 使用source标签指定视频的URL和格式，可以提供多个不同格式的视频源，浏览器会自动选择合适的一个 -->
+    <source src="https://media.w3.org/2010/05/sintel/trailer.mp4" type="video/mp4">
+    <source src="^3^" type="video/webm">
+    <!-- 如果浏览器不支持video标签，会显示以下文本 -->
+    <p>您的浏览器不支持HTML5视频。</p>
+  </video>
+</div>
+</body>
+</html>"
 date: Jan 2 2021
 ---
 
